# sw-nemotron-asr

./: .gitignore  Caddyfile  Cargo.toml  settings.json  test_e2e.py  test_ws.py
docs/: CHECKPOINT.md  data-processing-architecture.md  demo-runbook.md  nuh-oip-proposal-draft.md  roadmap.md  telehealth-mode.md
docs/superpowers/plans/: 2026-06-25-sessions-playback.md  2026-07-06-realtime-multilingual-translation.md  2026-07-12-nuh-multilingual-physio-poc.md
docs/superpowers/specs/: 2026-06-25-sessions-playback-design.md  2026-07-10-translation-provider-toggle-design.md
requirements/: gemini-001.md
scripts/: asr_translate_worker.py  download_models.ps1  download_models.py  setup_python.ps1  setup_python.sh  speaker_id.py
scripts/seeds/: glossary.json
skills/: SKILLS.md
src/: main.rs
static/: app.js  index.html  login.html  manifest.json  sw.js  tts.js
static/worklet/: pcm-capture.js
