[package]
name = "sw-nemotron-asr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart", "ws"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
hound = "3.5.1"
anyhow = "1.0.86"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"
rand = "0.8"
